--- a/views/landing.pug
+++ b/views/landing.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to jungle of #{title}
+  h1= task.name
+  p Welcome to jungle of #{task.name}
+  p #{task.completed}
   form(action="/" method="POST")
     input(type="email", name="email")
     button(type="submit") Submit
